gitea/k8s/resources/deployment.yaml
# 第四步：发布
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea-deployment
  namespace: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:1.26.2-rootless
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 22
          volumeMounts:
            - name: data
              mountPath: /data
            - name: config
              mountPath: /data/gitea/conf/app.ini
              subPath: app.ini
            - name: tls-secret
              mountPath: /etc/gitea/tls
              readOnly: true
          resources:
            limits:
              memory: "20Gi"
              cpu: "1000m"
            requests:
              memory: "10Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 60
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 5
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-pvc
        - name: config
          configMap:
            name: gitea-config
