gitea/k8s/resources/service.yaml
# 第五步：部署服务
apiVersion: v1
kind: Service
metadata:
  name: gitea-svc
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
    - name: https
      port: 443
      targetPort: 3000
    - name: ssh
      port: 222
      targetPort: 22
