gitea/k8s/resources/httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitea-http-route
  namespace: gitea
spec:
  parentRefs:
    - name: shared-gateway
      namespace: nginx-gateway # 引用共享网关
  hostnames:
    - "git.domain"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitea
          port: 3000
